--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ numpy==1.26.2
 scikit-learn==1.3.2
 Flask==3.0.0
 openpyxl==3.1.2
-python-Levenshtein==0.23.0 
+python-Levenshtein==0.23.0
+openai==1.3.0
+python-dotenv==1.0.0 
