--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ scikit-learn==1.3.2
 Flask==3.0.0
 openpyxl==3.1.2
 python-Levenshtein==0.23.0
-openai==1.3.0
-python-dotenv==1.0.0 
+openai==1.2.3
+python-dotenv==1.0.0
+httpx>=0.24.1,<1.0.0 
