--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,5 @@ python-Levenshtein==0.23.0
 google-generativeai==0.3.2
 python-dotenv==1.0.0
 httpx>=0.24.1,<1.0.0
-tenacity==8.2.3 
+tenacity==8.2.3
+gunicorn==21.2.0 
